# websocket-js-rust

./: Cargo.toml  README.md  app.js  index.html
src/: main.rs
